# ludum-dare-52

./: Cargo.toml
resources/: levels.kdl  puzzles.json5
src/: button.rs  geom.rs  level.rs  main.rs  puzzle.rs  resources.rs  states.rs  text.rs  util.rs
src/puzzle/: checker.rs
src/states/: gameplay.rs  levelselect.rs
src/states/gameplay/: draw.rs  update.rs
