[package]
name = "ld52"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.2", features = ["serde"] }
enum_dispatch = "0.3.9"
enumflags2 = "0.7.5"
gerrymander = "0.1.0"
hex2d = { version = "1.1.0", features = ["serde"] }
json5 = "0.4.1"
macroquad = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
